my project middle commit

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 </details>
 <br>
 <h2 class="cs">hello this is testing purpose</h2>
-
+<br><br><br>
+<div class="container">
+    <div class="box">1</div>
+    <div class="box2">2</div>
+    <div class="box3">3</div>
+</div>
 </body>
 </html>
